Fixes to mobile image visibility on cbp, part two

--- a/src/components/post-link.module.css
+++ b/src/components/post-link.module.css
@@ -547,7 +547,7 @@
   }
 
   .cbpImageMobile {
-    display: inline-block;
+    display: inline-block !important;
     height: 180px;
     margin-top: 15px;
   }
